# emotion-chat-bot

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  LICENSE  README-zh_tw.md  README.md  pyproject.toml
bot/: .gitignore  LoRA.ipynb  PEFT_TEST.ipynb  SA_on_daily_dialog.ipynb  data.ipynb  main.ipynb  requirements.sh
bot/correspond_generator/: test.ipynb
bot/data/: interface.py
bot/emotion_model/: Attention.py  EmotionModel.py  data_process.py  evaluate.ipynb  evaluate.py  test.ipynb
bot/emotion_model/attention/: AdditiveAttention.py  DotProductAttention.py  DualLinearAttention.py  ScaledDotProductAttention.py
bot/emotion_model/libs/: Attention.py  EmotionModel.py
bot/model/: interface.py
bot/response_generator/: Pipeline.py  data.ipynb  data_process.py  evaluate.ipynb  evaluate.py  fine_tune.ipynb  fine_tune.py  fine_tune_mamba.py  fine_tune_mistral.py  test.ipynb
bot/response_generator/CG_type3/: adapter_config.json
bot/response_generator/CG_type_scipt/: adapter_config.json
bot/response_generator/chat_template/: 1.txt  gemma.txt  llama2_IN_INST.txt  llama2_OUT_INST.txt
bot/response_generator/data/: daily_dialog_test  daily_dialog_validation
bot/sentiment _analysis/: run_SA.ipynb
bot/sentiment_analysis/: fine_tune.ipynb
bot/similarity_analyser/: SimilarityAnalyser.py  test.ipynb  test.py
chat-bot/: README_SA.md  em_data_process.py  em_evaluate.py  rg_fine_tune_sft.py
chat-bot/args/: em_train_arg.json
chat-bot/libs/: Attention.py  EmotionModel.py
chat-bot/models/: Pipeline.py  bot_model.py
chat-bot/models/emotion_model/: data_process.py  evaluate.py  train.py
chat-bot/models/emotion_predictor/: README_ep.md  evaluate.py  fine_tune_EP.py  sweep.py
chat-bot/models/response_generator/: README_dpo.md  bons.py  data_process.py  data_process_bons.py  evaluate.py  evaluate_dpo.py  evaluate_sft.py  fine_tune.py  fine_tune_dpo.py  fine_tune_ppo.py  fine_tune_sft.py  fine_tune_sft_continue.py
chat-bot/models/sentiment_analysis/: README.md  evaluate.py  fine_tune.py  fine_tune_SA.py
chat-bot/models/similarity_analysis/: SimilarityAnalyser.py
libs/: CommonConfig.py  Config.py
models/response_generator/response_generator/: fine_tune_ppo.py
script/: prepare-project.sh
src/: em_train.py  ep_evaluate.py  example.py  main.py  rg_evaluate_dpo.py  rg_evaluate_sft.py  rg_fine_tune_sft.py  rg_fine_tune_sft_continue.py  sa_fine_tune.py
src/bot/emotion_model/: data_process.py  data_process_arg.json  evaluate.py  fine_tune.py  test.ipynb  train.py
src/bot/libs/: CommonConfig.py  Config.py  __init__.py
src/bot/response_generator/: README.md  README_bons.md  bons.py  bons_process.py  data_process.py  evaluate.py  fine_tune.ipynb  fine_tune.py  (+8 more)
src/emotion_chat_bot/: EmotionChatBot.py
src/libs/: CommonConfig.py  EmotionChatBotPipeline.py
src/model/: em_sweep.py  ep_evaluate.py  ep_fine_tune.py  ep_sweep.py  example.py  main.py  rg_data_process_bons.py  rg_fine_tune_sft.py  rg_fine_tune_sft_continue.py  sa_evaluate.py  sa_fine_tune.py
src/models/: README_EP.md  em_data_process.py  em_evaluate.py  em_sweep.py  em_train.py  ep_evaluate.py  ep_fine_tune.py  ep_sweep.py  full_model.ipynb  rg_data_process.py  rg_data_process_bons.py  rg_evaluate_dpo.py  rg_evaluate_sft.py  rg_fine_tune_dpo.py  rg_fine_tune_sft.py  rg_fine_tune_sft_continue.py  sa_evaluate.py  sa_fine_tune.py  sa_train.py  test.ipynb
(+184 files in other folders)
