[tool.poetry]
name = "chat-bot"
version = "0.1.0"
description = ""
authors = [
    "hermeschen1116 <108386417+hermeschen1116@users.noreply.github.com>",
    "yangyx30678 <yangyx0000001@gmail.com>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
pip = "^24.1.2"
wheel = "^0.43.0"
setuptools = "^70.3.0"
huggingface-hub = "^0.23.0"
torch = "^2.3.0"
datasets = "^2.19.1"
peft = "^0.11.1"
trl = "^0.8.6"
transformers = "^4.41.0"
accelerate = "^0.30.1"
evaluate = "^0.4.1"
torcheval = "^0.0.7"
python-dotenv = "^1.0.1"
unsloth = { git = "https://github.com/unslothai/unsloth.git", extras = ["huggingface"] }
xformers = "^0.0.26.post1"

[tool.poetry.group.cuda.dependencies]
bitsandbytes = "^0.43.1"
flash-attn = "^2.6.1"

[tool.poetry.group.dev.dependencies]
wandb = "^0.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
