[project]
name = "emotion-chat-bot"
version = "0.1.0"
description = "A method to give chat bot its own emotion."
keywords = ["llm", "emotion"]
authors = [
	{ name = "hermeschen1116", email = "108386417+hermeschen1116@users.noreply.github.com" },
	{ name = "yangyx30678", email = "yangyx0000001@gmail.com" },
]
license = { text = "MIT License" }
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
	"accelerate>=0.34.2",
	"fastapi>=0.115.0",
	"peft>=0.12.0",
	"torch==2.4.0",
	"transformers>=4.44.2",
	"trl>=0.10.1",
	"uvicorn>=0.30.6",
]

[project.optional-dependencies]
cuda = [
	"bitsandbytes>=0.43.3",
	"unsloth[cu121-ampere-torch240]",
	"xformers>=0.0.27.post2",
	"flash-attn>=2.6.3",
]

[tool.uv]
dev-dependencies = [
	"datasets>=3.0.0",
	"evaluate>=0.4.3",
	"huggingface-hub>=0.24.7",
	"jupyter>=1.1.1",
	"python-dotenv>=1.0.1",
	"scikit-learn>=1.5.2",
	"setuptools>=74.1.2",
	"torcheval>=0.0.7",
	"wandb>=0.18.0",
	"wheel>=0.44.0",
	"imbalanced-learn>=0.12.3",
	"pre-commit>=4.0.1",
	"unsloth[colab-new]>=2024.8",
	"bitsandbytes>=0.44.1",
]
no-build-isolation-package = ["xformers", "flash-attn"]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
